# kotekan

./: .clang-format  .gitignore  CMakeLists.txt  CNAME  Jenkinsfile  LICENSE  Makefile  README  README.md  README_RFI.md  README_cherry.md  README_frb.md  README_new-HSA.md  install.sh  iwyu.kotekan.imp  readthedocs.yaml  run-ci.sh  run-gpu-tests.sh  upchannelize_noflip.cl
correlator/: CMakeLists.txt  correlator.c
docs/: .readthedocs.yaml  CMakeLists.txt  rtd-environment.yml  rtd-requirements.txt
docs/doxygen/: CMakeLists.txt  kotekan.doxy  kotekan.doxy.in
docs/sphinx/: .readthedocs.yaml  CMakeLists.txt  Makefile  conf.py  conf.py.in  dev_buffers.rst  dev_processes.rst  dev_rest_endpoints.rst  dev_style_guide.rst  doxygenindex.rst  index.rst  overview.rst  overview_compiling.rst  overview_theory_of_operation.rst  requirements.txt  user_config.rst  user_operation.rst
include/: CMakeLists.txt  LICENSE  fmt.hpp  mongoose.c  timing_mach.c  timing_mach.h
kotekan/: .kotekan_frb_test_dpdk-reorder-l0-packet_network.yaml.swp  CMakeCache.txt  CMakeLists.txt  Kotekan.cmake  Makefile  airspyMode.cpp  airspyMode.hpp  chime.cpp  chime.hpp  chimeShuffleMode.cpp  chimeShuffleMode.hpp  chime_shuffle.cpp  chime_shuffle.hpp  cmake_install.cmake  frbMode.cpp  frbMode.hpp  gpuReplayMode.cpp  gpuReplayMode.hpp  gpuTestMode.cpp  gpuTestMode.hpp  intensityReceiverMode.cpp  intensityReceiverMode.hpp  kotekan.c  kotekan.cmake  kotekan.conf  kotekan.cpp  kotekanMode.cpp  kotekanMode.hpp  kotekan_2048.conf  kotekan_RFI_test.yaml  kotekan_airspy.yaml  kotekan_baseband_test.yaml  kotekan_baseline_sub.yaml  kotekan_blanchard.conf  kotekan_buffer_recv.yaml  kotekan_buffer_send.yaml  kotekan_dualrun.yaml  kotekan_fakevis_test.yaml  kotekan_fpga_adc_test.yaml  kotekan_frb.yaml  (+88 more)
lib/: .buffers.c.kate-swp  CMakeLists.txt  Config.cpp  Config.hpp  KotekanProcess.cpp  KotekanProcess.h  KotekanProcess.hpp  SampleProcess.cpp  SampleProcess.h  SampleProcess.hpp  airspy_control.c  airspy_control.h  beamform_data_stage.cpp  beamform_data_stage.h  beamform_incoherent_kernel.cpp  beamform_incoherent_kernel.h  beamform_kernel.cpp  beamform_kernel.h  beamform_phase_data.cpp  beamform_phase_data.h  beamforming.c  beamforming.h  beamformingPostProcess.cpp  beamformingPostProcess.hpp  beamforming_post_process.c  beamforming_post_process.h  buffer.c  buffer.h  bufferContainer.cpp  bufferContainer.hpp  bufferFactory.cpp  bufferFactory.hpp  buffers.c  buffers.h  callbackdata.cpp  callbackdata.h  ch_acq_uplink.c  ch_acq_uplink.h  chimeMetadata.h  chrx.c  (+177 more)
lib/N2/: CMakeLists.txt  N2FrameView.cpp  N2FrameView.hpp  N2Metadata.hpp  N2Util.hpp  N2kAccumulate.cpp  N2kAccumulate.hpp
lib/core/: CMakeLists.txt  Config.cpp  Config.hpp  KotekanProcess.cpp  KotekanProcess.hpp  Stage.cpp  Stage.hpp  StageFactory.cpp  StageFactory.hpp  basebandApiManager.cpp  basebandApiManager.hpp  basebandReadoutManager.cpp  basebandReadoutManager.hpp  basebandRequestManager.cpp  basebandRequestManager.hpp  baseband_manager.cpp  baseband_manager.hpp  baseband_request_manager.cpp  baseband_request_manager.hpp  buffer.c  buffer.cpp  buffer.h  buffer.hpp  bufferContainer.cpp  bufferContainer.hpp  bufferFactory.cpp  bufferFactory.hpp  configEval.hpp  configUpdater.cpp  configUpdater.hpp  core.cmake  cpuMonitor.cpp  cpuMonitor.hpp  errors.c  errors.h  factory.hpp  juliaManager.cpp  juliaManager.hpp  kotekanLogging.cpp  kotekanLogging.hpp  (+24 more)
lib/cuda/: CMakeLists.txt  chordMVPSetup.cpp  chordMVPSetup.hpp  cudaBasebandBeamformer.cpp  cudaBasebandBeamformer.hpp  cudaBasebandBeamformer_chime.cpp  cudaBasebandBeamformer_chord.cpp  cudaBasebandBeamformer_hirax.cpp  cudaBasebandBeamformer_pathfinder.cpp  cudaCHIMEFRBBeamformer_chime_U16.cpp  cudaCommand.cpp  cudaCommand.hpp  cudaCopyFromRingbuffer.cpp  cudaCopyFromRingbuffer.hpp  cudaCopyToRingbuffer.cpp  cudaCopyToRingbuffer.hpp  cudaCorrelator.cpp  cudaCorrelator.hpp  cudaCorrelatorAstron.cpp  cudaCorrelatorAstron.hpp  cudaCorrelatorKernel.cu  cudaCorrelatorKernel.cuh  cudaCorrelatorRomein.cpp  cudaCorrelatorRomein.hpp  cudaDeviceInterface.cpp  cudaDeviceInterface.hpp  cudaEventContainer.cpp  cudaEventContainer.hpp  cudaFRBBeamReformer.cpp  cudaFRBBeamReformer.hpp  cudaFRBBeamformer.cpp  cudaFRBBeamformer.hpp  cudaFRBBeamformer_chord.cpp  cudaFRBBeamformer_chord_U1.cpp  cudaFRBBeamformer_chord_U128.cpp  cudaFRBBeamformer_chord_U16.cpp  cudaFRBBeamformer_chord_U2.cpp  cudaFRBBeamformer_chord_U32.cpp  cudaFRBBeamformer_chord_U4.cpp  cudaFRBBeamformer_chord_U64.cpp  (+86 more)
lib/dpdk/: CMakeLists.txt  captureHandler.hpp  dpdk.cmake  dpdkCore.cpp  dpdkCore.hpp  iceBoardHandler.hpp  iceBoardShuffle.hpp  iceBoardStandard.hpp  iceBoardVDIF.hpp  invalidateVDIFframes.cpp  invalidateVDIFframes.hpp  packet_copy.h  rfsocHandler.hpp  zeroSamples.cpp  zeroSamples.hpp
lib/gpu/: CMakeLists.txt  gpu.cmake  gpuBufferHandler.cpp  gpuBufferHandler.hpp  gpuCommand.cpp  gpuCommand.hpp  gpuDeviceInterface.cpp  gpuDeviceInterface.hpp  gpuEventContainer.cpp  gpuEventContainer.hpp  gpuProcess.cpp  gpuProcess.hpp
lib/gpu_command_objects/: beamform_incoherent_kernel.cpp  beamform_kernel.cpp  beamform_kernel.h  beamform_phase_data.cpp  correlator_kernel.cpp  correlator_kernel.h  hsaBarrier.cpp  hsaBeamformKernel.cpp  hsaBeamformOutput.hpp  hsaCorrelatorKernel.cpp  hsaCorrelatorKernel.hpp  hsaInputData.cpp  hsaInputData.hpp  hsaOutputData.cpp  hsaOutputData.hpp  hsaOutputDataZero.cpp  hsaPreseedKernel.cpp  offset_kernel.h  output_beamform_incoh_result.h  output_beamform_result.h  output_data_result.cpp  output_data_result.h  preseed_kernel.cpp  preseed_kernel.h
lib/hcc/: CMakeLists.txt  hcc.cmake  hccGPUThread.cpp  hccGPUThread.hpp
lib/hip/: CMakeLists.txt  hipCommand.cpp  hipCommand.hpp  hipDeviceInterface.cpp  hipDeviceInterface.hpp  hipEventContainer.cpp  hipEventContainer.hpp  hipInputData.cpp  hipInputData.hpp  (+5 more)
tools/: CMakeLists.txt  adc_dump.c  cmake_format_config.py  cmakelint.sh  gpu_stream_dump.c  inspect_pkt.c  inspect_pkt_server.c  lint.sh  pyPeekTCP.py  ring_recv.c  ring_send.c
vdif_dump/: CMakeLists.txt  vdif_dump.c
(+2448 files in other folders)
